--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "src/__tests__/**/*", "src/index.ts"]
+  "exclude": ["node_modules", "dist", "src/__tests__/**/*"]
 }
