--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "neverthrow": "^8.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "4.0.0-beta.20250505T195954"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
