--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "uuid": "^9.0.1",
-    "zod": "4.0.0-beta.20250505T195954"
+    "zod": "3.24.4"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
